Fix horizontal scrolling of transaction table

--- a/public/css/components.css
+++ b/public/css/components.css
@@ -190,6 +190,11 @@
 }
 
 /* Data Table */
+.table-wrapper {
+    overflow-x: auto;
+    width: 100%;
+}
+
 .data-table {
     width: 100%;
     border-collapse: collapse;
